# CoolNotifications

./: Makefile  README.md  libgnutls_fil_list.txt  libgnutls_file_list.txt  local.properties  make_disable_log.txt  make_log_clang.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sulav/coolnotifications/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sulav/coolnotifications/: NotificationService.java  TestActivity.java
app/src/main/java/com/sulav/coolnotifications/model/: BaseNotification.java  ExpandableNotification.java  SimpleNotification.java
app/src/main/java/com/sulav/coolnotifications/model/custom/: BasicNotification.java
app/src/main/java/com/sulav/coolnotifications/receiver/: JsonNotificationReceiver.java
app/src/main/java/com/sulav/coolnotifications/utils/: NotificationConstant.java  NotificationImageCache.java
app/src/main/res/layout/: test_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sulav/coolnotifications/: ExampleUnitTest.java
gnutls/: BUILD.gn  BUILD_BK_lib_folder.gn  Makefile  duplicate_files.txt
gnutls/external_libs/: unbound-libs-1.6.6-5.el7_8.armv7hl.rpm
gnutls/external_libs/libidn2-2.3.0-arm-1/install/: doinst.sh
gnutls/external_libs/libidn2-2.3.0-arm-1/usr/doc/libidn2-2.3.0/: ChangeLog
gnutls/external_libs/libidn2-2.3.0-arm-1/usr/lib/: libidn2.so.0.3.7
gnutls/external_libs/libidn2-2.3.0-arm-1/usr/lib/pkgconfig/: libidn2.pc
gnutls/external_libs/libtasn1-4.16.0-arm-1/install/: doinst.sh
gnutls/external_libs/libtasn1-4.16.0-arm-1/usr/doc/libtasn1-4.16.0/: ChangeLog
gnutls/external_libs/libtasn1-4.16.0-arm-1/usr/lib/: libtasn1.so.6.6.0
gnutls/external_libs/libtasn1-4.16.0-arm-1/usr/lib/pkgconfig/: libtasn1.pc
gnutls/external_libs/nettle-3.4.1-arm-1_slack14.2/install/: doinst.sh
gnutls/external_libs/nettle-3.4.1-arm-1_slack14.2/usr/doc/nettle-3.4.1/: ChangeLog
gnutls/external_libs/nettle-3.4.1-arm-1_slack14.2/usr/include/nettle/: nettle-stdint.h
gnutls/external_libs/nettle-3.4.1-arm-1_slack14.2/usr/lib/: libhogweed.so.4.5  libnettle.so.6.5
gnutls/external_libs/nettle-3.4.1-arm-1_slack14.2/usr/lib/pkgconfig/: hogweed.pc  nettle.pc
gnutls/external_libs/nettle-3.7-arm-1/install/: doinst.sh
gnutls/external_libs/nettle-3.7-arm-1/usr/doc/nettle-3.7/: ChangeLog
gnutls/external_libs/nettle-3.7-arm-1/usr/lib/: libhogweed.so.6.1  libnettle.so.8.1
gnutls/external_libs/nettle-3.7-arm-1/usr/lib/pkgconfig/: hogweed.pc  nettle.pc
gnutls/external_libs/p11-kit-0.23.22-arm-1/install/: doinst.sh
gnutls/external_libs/p11-kit-0.23.22-arm-1/usr/doc/p11-kit-0.23.22/: ChangeLog
gnutls/external_libs/p11-kit-0.23.22-arm-1/usr/lib/: libp11-kit.so.0.3.0
gnutls/external_libs/p11-kit-0.23.22-arm-1/usr/lib/pkcs11/: p11-kit-client.la  p11-kit-trust.la
gnutls/external_libs/p11-kit-0.23.22-arm-1/usr/lib/pkgconfig/: p11-kit-1.pc
gnutls/external_libs/p11-kit-0.23.22-arm-1/usr/libexec/p11-kit/: p11-kit-remote  p11-kit-server
gnutls/external_libs/p11-kit-0.23.22-arm-1/usr/share/gtk-doc/html/p11-kit/: config-example.html  config-files.html  config.html  devel-building-style.html  devel-building.html  devel-commands.html  devel-debugging.html  devel-paths.html  devel-testing.html  devel.html  index.html  p11-kit-Deprecated.html  p11-kit-Future.html  p11-kit-Modules.html  p11-kit-PIN-Callbacks.html  p11-kit-URIs.html  p11-kit-Utilities.html  p11-kit.html  pkcs11-conf.html  reference.html  remoting.html  sharing-managed.html  sharing.html  tools.html  trust-disable.html  trust-glib-networking.html  trust-module.html  trust-nss.html  trust.html
gnutls/gl/: BUILD.gn
gnutls/guile/src/: BUILD.gn
gnutls/lib/: BUILD.gn
gnutls/lib/accelerated/: BUILD.gn
gnutls/lib/accelerated/x86/: BUILD.gn
gnutls/lib/algorithms/: BUILD.gn
gnutls/lib/auth/: BUILD.gn
gnutls/lib/ext/: BUILD.gn
gnutls/lib/extras/: BUILD.gn
gnutls/lib/nettle/: BUILD.gn
gnutls/lib/unistring/: BUILD.gn
gnutls/lib/x509/: BUILD.gn
gnutls/libdane/: BUILD.gn
gnutls/src/: BUILD.gn  Makefile
gnutls/src/gl/: BUILD.gn
gradle/wrapper/: gradle-wrapper.properties
