import("//build/lite/config/component/lite_component.gni")

config("lib_config") {
  include_dirs = [
    "//third_party/gnutls/lib",
  ]
}

lib_sources = [
  "//third_party/gnutls/lib/range.c",
  "//third_party/gnutls/lib/record.c",
  "//third_party/gnutls/lib/compress.c",
  "//third_party/gnutls/lib/debug.c",
  "//third_party/gnutls/lib/cipher.c",
  "//third_party/gnutls/lib/handshake-tls13.c",
  "//third_party/gnutls/lib/mbuffers.c",
  "//third_party/gnutls/lib/buffers.c",
  "//third_party/gnutls/lib/handshake.c",
  "//third_party/gnutls/lib/errors.c",
  "//third_party/gnutls/lib/dh.c",
  "//third_party/gnutls/lib/kx.c",
  "//third_party/gnutls/lib/cipher-cbc.c",
  "//third_party/gnutls/lib/priority.c",
  "//third_party/gnutls/lib/hash_int.c",
  "//third_party/gnutls/lib/cipher_int.c",
  "//third_party/gnutls/lib/session.c",
  "//third_party/gnutls/lib/db.c",
  "//third_party/gnutls/lib/x509_b64.c",
  "//third_party/gnutls/lib/hello_ext.c",
  "//third_party/gnutls/lib/auth.c",
  "//third_party/gnutls/lib/sslv2_compat.c",
  "//third_party/gnutls/lib/datum.c",
  "//third_party/gnutls/lib/session_pack.c",
  "//third_party/gnutls/lib/mpi.c",
  "//third_party/gnutls/lib/pk.c",
  "//third_party/gnutls/lib/cert-cred.c",
  "//third_party/gnutls/lib/global.c",
  "//third_party/gnutls/lib/constate.c",
  "//third_party/gnutls/lib/anon_cred.c",
  "//third_party/gnutls/lib/pkrix_asn1_tab.c",
  "//third_party/gnutls/lib/gnutls_asn1_tab.c",
  "//third_party/gnutls/lib/mem.c",
  "//third_party/gnutls/lib/fingerprint.c",
  "//third_party/gnutls/lib/tls-sig.c",
  "//third_party/gnutls/lib/ecc.c",
  "//third_party/gnutls/lib/alert.c",
  "//third_party/gnutls/lib/privkey_raw.c",
  "//third_party/gnutls/lib/system/certs.c",
  "//third_party/gnutls/lib/system/threads.c",
  "//third_party/gnutls/lib/system/fastopen.c",
  "//third_party/gnutls/lib/system/sockets.c",
  "//third_party/gnutls/lib/str-iconv.c",
  "//third_party/gnutls/lib/system.c",
  "//third_party/gnutls/lib/profiles.c",
  "//third_party/gnutls/lib/inih/ini.c",
  "//third_party/gnutls/lib/str.c",
  "//third_party/gnutls/lib/str-unicode.c",
  "//third_party/gnutls/lib/str-idna.c",
  "//third_party/gnutls/lib/state.c",
  "//third_party/gnutls/lib/cert-cred-x509.c",
  "//third_party/gnutls/lib/file.c",
  "//third_party/gnutls/lib/supplemental.c",
  "//third_party/gnutls/lib/random.c",
  "//third_party/gnutls/lib/crypto-api.c",
  "//third_party/gnutls/lib/privkey.c",
  "//third_party/gnutls/lib/pcert.c",
  "//third_party/gnutls/lib/pubkey.c",
  "//third_party/gnutls/lib/locks.c",
  "//third_party/gnutls/lib/dtls.c",
  "//third_party/gnutls/lib/system_override.c",
  "//third_party/gnutls/lib/crypto-backend.c",
  "//third_party/gnutls/lib/verify-tofu.c",
  "//third_party/gnutls/lib/pin.c",
  "//third_party/gnutls/lib/tpm.c",
  "//third_party/gnutls/lib/fips.c",
  "//third_party/gnutls/lib/safe-memfuncs.c",
  "//third_party/gnutls/lib/atfork.c",
  "//third_party/gnutls/lib/randomart.c",
  "//third_party/gnutls/lib/urls.c",
  "//third_party/gnutls/lib/prf.c",
  "//third_party/gnutls/lib/auto-verify.c",
  "//third_party/gnutls/lib/dh-session.c",
  "//third_party/gnutls/lib/cert-session.c",
  "//third_party/gnutls/lib/handshake-checks.c",
  "//third_party/gnutls/lib/dtls-sw.c",
  "//third_party/gnutls/lib/dh-primes.c",
  "//third_party/gnutls/lib/opengp_compat.c",
  "//third_party/gnutls/lib/crypto-selftests.c",
  "//third_party/gnutls/lib/crypto-selftests-pk.c",
  "//third_party/gnutls/lib/secrets.c",
  "//third_party/gnutls/lib/extv.c",
  "//third_party/gnutls/lib/hello_ext_lib.c",
  "//third_party/gnutls/lib/ocsp-api.c",
  "//third_party/gnutls/lib/stek.c",
  "//third_party/gnutls/lib/cert-cred-rawpk.c",
  "//third_party/gnutls/lib/iov.c",
  "//third_party/gnutls/lib/vko.c",
  "//third_party/gnutls/lib/system/keys-dummy.c",
  "//third_party/gnutls/lib/tls13/encrypted_extensions.c",
  "//third_party/gnutls/lib/tls13/certificate_request.c",
  "//third_party/gnutls/lib/tls13/certificate_verify.c",
  "//third_party/gnutls/lib/tls13-sig.c",
  "//third_party/gnutls/lib/tls13/finished.c",
  "//third_party/gnutls/lib/tls13/key_update.c",
  "//third_party/gnutls/lib/tls13/hello_retry.c",
  "//third_party/gnutls/lib/tls13/session_ticket.c",
  "//third_party/gnutls/lib/tls13/certificate.c",
  "//third_party/gnutls/lib/tls13/early_data.c",
  "//third_party/gnutls/lib/tls13/post_handshake.c",
  "//third_party/gnutls/lib/tls13/psk_ext_parser.c",
  "//third_party/gnutls/lib/tls13/anti_replay.c",
  "//third_party/gnutls/lib/pkcs11.c",
  "//third_party/gnutls/lib/pkcs11x.c",
  "//third_party/gnutls/lib/pkcs11_privkey.c",
  "//third_party/gnutls/lib/pkcs11_write.c",
  "//third_party/gnutls/lib/pkcs11_secret.c",
  "//third_party/gnutls/lib/pkcs11_int.c",
  "//third_party/gnutls/lib/srp.c",
  "//third_party/gnutls/lib/psk.c",
]
lite_library("lib") {
  target_type = "shared_library"
  sources = lib_sources

  public_configs = [
    ":lib_config",
  ]
}