import("//build/lite/config/component/lite_component.gni")

config("unitsring_config") {
  include_dirs = [
    "//third_party/gnutls/lib/unistring",
    "//third_party/gnutls/lib/unistring/uninorm",
    "//third_party/gnutls/lib/unistring/unictype",
    "//third_party/gnutls/lib/unistring/unistr",
    "//third_party/gnutls/lib/unistring/sys",
  ]
}

unistring_sources = [
  "//third_party/gnutls/lib/unistring/unictype/categ_C.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Cc.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Cf.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Cn.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Co.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Cs.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_L.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_LC.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Ll.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Lm.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_.c.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Lt.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Lu.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_M.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Mc.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Me.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Mn.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_N.id",
  "//third_party/gnutls/lib/unistring/unictype/categ_Nd.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Nl.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_No.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_P.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Pc.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Pd.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Pe.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Pf.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Pi.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Po.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Ps.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_S.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Sc.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Sk.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Sm.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_So.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Z.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Zl.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Zp.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_Zs.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_and_not.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_byname.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_.cngname.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_name.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_none.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_of.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_or.c",
  "//third_party/gnutls/lib/unistring/unictype/categ_test.c",
  "//third_party/gnutls/lib/unistring/unictype/combiningclass.c",
  "//third_party/gnutls/lib/unistring/unictype/pr_default_ignorable_code_point.c",
  "//third_party/gnutls/lib/unistring/unictype/pr_join_control.c",
  "//third_party/gnutls/lib/unistring/unictype/pr_not_a_character.c",
  "//third_party/gnutls/lib/unistring/uninorm/canonical-decomposition.c",
  "//third_party/gnutls/lib/unistring/uninorm/compat-decomposition.c",
  "//third_party/gnutls/lib/unistring/uninorm/composition.c",
  "//third_party/gnutls/lib/unistring/uninorm/decompose-internal.c",
  "//third_party/gnutls/lib/unistring/uninorm/decomposition-table.c",
  "//third_party/gnutls/lib/unistring/uninorm/decomposition.c",
  "//third_party/gnutls/lib/unistring/uninorm/nfc.c",
  "//third_party/gnutls/lib/unistring/uninorm/nfd.c",
  "//third_party/gnutls/lib/unistring/uninorm/nfkc.c",
  "//third_party/gnutls/lib/unistring/uninorm/nfkd.c",
  "//third_party/gnutls/lib/unistring/uninorm/u16-normalize.c",
  "//third_party/gnutls/lib/unistring/uninorm/u32-normalize.c",
  "//third_party/gnutls/lib/unistring/uninorm/u8-normalize.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-mbtouc-unsafe-aux.c",
  "//third_party/gnutls/lib/unistring/unistr/u32-mbtouc-unsafe.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-cpy.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-mbtouc-unsafe.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-to-u8.c",
  "//third_party/gnutls/lib/unistring/unistr/u32-cpy.c",
  "//third_party/gnutls/lib/unistring/unistr/u32-to-u.c",
  "//third_party/gnutls/lib/unistring/unistr/u32-uctomb.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-check.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-cpy.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-mbtouc-unsafe-aux.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-mbtouc-unsafe.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-mbtoucr.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-to-u16.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-to-u32.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-uctomb-aux.c",
  "//third_party/gnutls/lib/unistring/unistr/u8-uctomb.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-mbtoucr.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-uctomb.c",
  "//third_party/gnutls/lib/unistring/unistr/u16-uctomb-aux.c",
  "//third_party/gnutls/lib/unistring/unistr/ultuctomb-aux.c",
]

lite_library("unistring") {
  target_type = "shared_library"
  sources = unistring_sources

  public_configs = [
    ":unistring_config",
  ]
}